[package]
name = "snipp-rust"
version = "0.1.0"
edition = "2021"
description = "Rust API wrapper for Snipp (https://api.snipp.gg)"
license = "MIT"

[dependencies]
reqwest = { version = "0.12", features = ["multipart", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
thiserror = "2"
