[package]
name = "snipp"
version = "1.0.2"
edition = "2024"
description = "Rust API wrapper for Snipp"
license = "MIT"
keywords = ["clips", "upload", "snipp", "images", "share", "api"]
homepage = "https://docs.snipp.gg/sdks/rust"
repository = "https://github.com/snipp-gg/snipp-rust"

[dependencies]
reqwest = { version = "0.12", features = ["multipart", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
thiserror = "2"